test/sema/typeck/literal/float-infer-overflow.dora
fn f(): Float32 { 3.5e38 }
